Update ingestion of products
