# application/src/main/kotlin/br/com/vertice/emerion_dashboard/application/product/ingestion/model/IngestProductCommand.kt
@@ -16,6 +16,8 @@ data class IngestProductCommand(
     val tipo: String? = null,
     val marca: String? = null,
     val unidade: String? = null,
+    val unidadeEntrada: String? = null,
+    val unidadeSaida: String? = null,
     val pesoLiquido: BigDecimal? = null,
     val pesoBruto: BigDecimal? = null,
     val descontinuado: Boolean? = null,
@@ -26,4 +28,29 @@ data class IngestProductCommand(
     val preco3: BigDecimal? = null,
     val preco4: BigDecimal? = null,
     val preco5: BigDecimal? = null,
+    val descontoPadrao: BigDecimal? = null,
+    val estoqueDisponivel: BigDecimal? = null,
+    val estoqueMinimo: BigDecimal? = null,
+    val estoqueMaximo: BigDecimal? = null,
+    val estoqueReservado: BigDecimal? = null,
+    val estoqueAdquirido: BigDecimal? = null,
+    val estoqueAtual: BigDecimal? = null,
+    val estoqueRma: BigDecimal? = null,
+    val similar: String? = null,
+    val quantidadeVolumes: BigDecimal? = null,
+    val quantidadeEmbalagem: BigDecimal? = null,
+    val localizacao: String? = null,
+    val cubagem: BigDecimal? = null,
+    val codigoBarrasEmbalagem: String? = null,
+    val ibsCClassTrib: String? = null,
+    val ibsCst: String? = null,
+    val fcpEntrada: BigDecimal? = null,
+    val fcpSaida: BigDecimal? = null,
+    val ipiSaida: String? = null,
+    val ipiEntrada: String? = null,
+    val icmSaida: String? = null,
+    val icmEntrada: String? = null,
+    val icmStSaida: String? = null,
+    val icmStEntrada: String? = null,
+    val observacao: String? = null,
 )
