# infrastructure/src/main/kotlin/br/com/vertice/emerion_dashboard/infrastructure/persistence/product/projection/ProductProjection.kt
@@ -21,6 +21,8 @@ interface ProductProjection {
     val tipo: String?
     val marca: String?
     val unidade: String?
+    val unidadeEntrada: String?
+    val unidadeSaida: String?
     val pesoLiquido: BigDecimal?
     val pesoBruto: BigDecimal?
     val descontinuado: Boolean?
@@ -31,6 +33,31 @@ interface ProductProjection {
     val preco3: BigDecimal?
     val preco4: BigDecimal?
     val preco5: BigDecimal?
+    val descontoPadrao: BigDecimal?
+    val estoqueDisponivel: BigDecimal?
+    val estoqueMinimo: BigDecimal?
+    val estoqueMaximo: BigDecimal?
+    val estoqueReservado: BigDecimal?
+    val estoqueAdquirido: BigDecimal?
+    val estoqueAtual: BigDecimal?
+    val estoqueRma: BigDecimal?
+    val similarProduct: String?
+    val quantidadeVolumes: BigDecimal?
+    val quantidadeEmbalagem: BigDecimal?
+    val localizacao: String?
+    val cubagem: BigDecimal?
+    val codigoBarrasEmbalagem: String?
+    val ibsCClassTrib: String?
+    val ibsCst: String?
+    val fcpEntrada: BigDecimal?
+    val fcpSaida: BigDecimal?
+    val ipiSaida: String?
+    val ipiEntrada: String?
+    val icmSaida: String?
+    val icmEntrada: String?
+    val icmStSaida: String?
+    val icmStEntrada: String?
+    val observacao: String?
     val createdAt: Instant
     val updatedAt: Instant
 }
