# infrastructure/src/main/kotlin/br/com/vertice/emerion_dashboard/infrastructure/persistence/product/repository/ProductQueryRepository.kt
@@ -34,6 +34,8 @@ interface ProductQueryRepository : Repository<ProductJpaEntity, Long> {
                 tipo,
                 marca,
                 unidade,
+                unidade_entrada AS unidadeEntrada,
+                unidade_saida AS unidadeSaida,
                 peso_liquido AS pesoLiquido,
                 peso_bruto AS pesoBruto,
                 descontinuado,
@@ -44,6 +46,31 @@ interface ProductQueryRepository : Repository<ProductJpaEntity, Long> {
                 preco3,
                 preco4,
                 preco5,
+                desconto_padrao AS descontoPadrao,
+                estoque_disponivel AS estoqueDisponivel,
+                estoque_minimo AS estoqueMinimo,
+                estoque_maximo AS estoqueMaximo,
+                estoque_reservado AS estoqueReservado,
+                estoque_adquirido AS estoqueAdquirido,
+                estoque_atual AS estoqueAtual,
+                estoque_rma AS estoqueRma,
+                similar_product AS similarProduct,
+                quantidade_volumes AS quantidadeVolumes,
+                quantidade_embalagem AS quantidadeEmbalagem,
+                localizacao,
+                cubagem,
+                codigo_barras_embalagem AS codigoBarrasEmbalagem,
+                ibs_c_class_trib AS ibsCClassTrib,
+                ibs_cst AS ibsCst,
+                fcp_entrada AS fcpEntrada,
+                fcp_saida AS fcpSaida,
+                ipi_saida AS ipiSaida,
+                ipi_entrada AS ipiEntrada,
+                icm_saida AS icmSaida,
+                icm_entrada AS icmEntrada,
+                icm_st_saida AS icmStSaida,
+                icm_st_entrada AS icmStEntrada,
+                observacao,
                 created_at AS createdAt,
                 updated_at AS updatedAt
             FROM product
@@ -69,6 +96,8 @@ interface ProductQueryRepository : Repository<ProductJpaEntity, Long> {
                 tipo,
                 marca,
                 unidade,
+                unidade_entrada AS unidadeEntrada,
+                unidade_saida AS unidadeSaida,
                 peso_liquido AS pesoLiquido,
                 peso_bruto AS pesoBruto,
                 descontinuado,
@@ -79,6 +108,31 @@ interface ProductQueryRepository : Repository<ProductJpaEntity, Long> {
                 preco3,
                 preco4,
                 preco5,
+                desconto_padrao AS descontoPadrao,
+                estoque_disponivel AS estoqueDisponivel,
+                estoque_minimo AS estoqueMinimo,
+                estoque_maximo AS estoqueMaximo,
+                estoque_reservado AS estoqueReservado,
+                estoque_adquirido AS estoqueAdquirido,
+                estoque_atual AS estoqueAtual,
+                estoque_rma AS estoqueRma,
+                similar_product AS similarProduct,
+                quantidade_volumes AS quantidadeVolumes,
+                quantidade_embalagem AS quantidadeEmbalagem,
+                localizacao,
+                cubagem,
+                codigo_barras_embalagem AS codigoBarrasEmbalagem,
+                ibs_c_class_trib AS ibsCClassTrib,
+                ibs_cst AS ibsCst,
+                fcp_entrada AS fcpEntrada,
+                fcp_saida AS fcpSaida,
+                ipi_saida AS ipiSaida,
+                ipi_entrada AS ipiEntrada,
+                icm_saida AS icmSaida,
+                icm_entrada AS icmEntrada,
+                icm_st_saida AS icmStSaida,
+                icm_st_entrada AS icmStEntrada,
+                observacao,
                 created_at AS createdAt,
                 updated_at AS updatedAt
             FROM product
