# infrastructure/src/main/kotlin/br/com/vertice/emerion_dashboard/infrastructure/rest/product/mapper/ProductQueryRestMapper.kt
@@ -25,6 +25,8 @@ object ProductQueryRestMapper {
             tipo = product.tipo,
             marca = product.marca,
             unidade = product.unidade,
+            unidadeEntrada = product.unidadeEntrada,
+            unidadeSaida = product.unidadeSaida,
             pesoLiquido = product.pesoLiquido,
             pesoBruto = product.pesoBruto,
             descontinuado = product.descontinuado,
@@ -35,6 +37,31 @@ object ProductQueryRestMapper {
             preco3 = product.preco3,
             preco4 = product.preco4,
             preco5 = product.preco5,
+            descontoPadrao = product.descontoPadrao,
+            estoqueDisponivel = product.estoqueDisponivel,
+            estoqueMinimo = product.estoqueMinimo,
+            estoqueMaximo = product.estoqueMaximo,
+            estoqueReservado = product.estoqueReservado,
+            estoqueAdquirido = product.estoqueAdquirido,
+            estoqueAtual = product.estoqueAtual,
+            estoqueRMA = product.estoqueRma,
+            similar = product.similar,
+            quantidadeVolumes = product.quantidadeVolumes,
+            quantidadeEmbalagem = product.quantidadeEmbalagem,
+            localizacao = product.localizacao,
+            cubagem = product.cubagem,
+            codigoBarrasEmbalagem = product.codigoBarrasEmbalagem,
+            ibsCClassTrib = product.ibsCClassTrib,
+            ibsCst = product.ibsCst,
+            fcpEntrada = product.fcpEntrada,
+            fcpSaida = product.fcpSaida,
+            ipiSaida = product.ipiSaida,
+            ipiEntrada = product.ipiEntrada,
+            icmSaida = product.icmSaida,
+            icmEntrada = product.icmEntrada,
+            icmStSaida = product.icmStSaida,
+            icmStEntrada = product.icmStEntrada,
+            observacao = product.observacao,
             createdAt = product.createdAt.atOffset(ZoneOffset.UTC),
             updatedAt = product.updatedAt.atOffset(ZoneOffset.UTC),
         )
